# pyFlightData

./: .gitignore  README.md  flightScrawl.py  main.py  main_remote_debug.py  preprocess.py  pyproject.toml  utility.py
configs/: list.json  need_vars.csv
